--- a/core.css
+++ b/core.css
@@ -1,6 +1,6 @@
 *
 {
-  color:#d9d9d9 !important;
+  color:#d9d9d9;
   text-decoration: none ;
   font-family:verdana !important;
   text-align:center !important;
@@ -17,10 +17,14 @@
    -ms-user-select: none !important;
    user-select: none !important;
 	cursor: default !important;
+  overflow-y:scroll!important;
+  
 }
 body
 {
  background-color:#333333!important;
+  overflow-y:scroll!important;
+ 
 }
 h1
 {
@@ -28,7 +32,7 @@ h1
   font-size:7vw !important;
   padding-bottom:0%;
 }
-#gh:hover, #ig:hover, #li:hover, #em:hover, #re:hover
+#gh:hover, #ig:hover, #li:hover, #me:hover, #re:hover
 {
   fill-opacity:0.4;
 }
@@ -48,7 +52,7 @@ h1
 {
   display:inline-block;
 }
-#skills
+#skills, #about
 {
 	margin:0 15vw 0 15vw
 }
