added pages and verticle allignment navbar

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ margin-bottom: 1vh;
 width:100%;
 height: 1vh;
 background-color: #FEC398;
+padding: 0;
 
 }
 .title{
@@ -31,9 +32,12 @@ body{
 	font-family: 'Roboto', sans-serif;
 	margin-left:25%;
 	margin-right:25%;
-	margin-top: 40vh;
+
 	overflow: hidden;
 	text-decoration: none;
+}
+#home{
+	margin-top: 40vh;
 }
 
 /*social stuff*/
@@ -54,7 +58,11 @@ body{
   padding: 0;
 
 }
-
+.navbar ul{
+	position: relative;
+	bottom: 0%;
+	
+}
 #contact li
 {
   display:inline; 
@@ -67,7 +75,9 @@ body{
   color: #333333;
   display:inline;
   float: right;
-  padding: 5px;
+  padding-left: 5vh;
+  padding-bottom: 0;
+  padding-top: 2vh;
 
 
 }
