--- a/style.css
+++ b/style.css
@@ -19,7 +19,19 @@ padding: 0;
 .title{
 	font-weight: bold;
 	font-size: 5vh;
-	width:50%;
+	/*width:35%;*/
+	width: 32vh;
+	display: inline-block;
+}
+.phonetic{
+	font-weight: bold;
+	font-size: 2vh;
+	/*width:20%;*/
+	width:15vh;
+	display: inline-block;
+	opacity: 0.5;
+}
+.audio{
 	display: inline-block;
 }
 h2{
@@ -32,7 +44,7 @@ body{
 	font-family: 'Roboto', sans-serif;
 	margin-left:25%;
 	margin-right:25%;
-
+	font-size: 2vh;
 	overflow: hidden;
 	text-decoration: none;
 }
@@ -48,7 +60,8 @@ body{
 .navbar{
 	/*display:inline-block ; */
 	float:right;
-	width: 50%;
+	/*width: 45%;*/
+	width: 31vh;
 	height:5vh;
 }
 #contact ul, .navbar ul
@@ -84,7 +97,7 @@ body{
 a { color: inherit; 
 text-decoration: none;} 
 /*#dr:hover, #gh:hover, #ig:hover, #li:hover, #me:hover, #re:hover, .navbar li*/
-li:hover
+li:hover, .audio:hover
 {
     fill-opacity:0.4;
 }
