--- a/style.css
+++ b/style.css
@@ -1,103 +1,117 @@
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('roboto.eot'); /* IE9 Compat Modes */
-  src: url('roboto.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('roboto.woff') format('woff'), /* Modern Browsers */
-  url('roboto.ttf')  format('truetype'), /* Safari, Android, iOS */
-  url('roboto.svg#svgFontName') format('svg'); /* Legacy iOS */
-}
-.bar{
-margin-top: 1vh;
-margin-bottom: 1vh;
-width:100%;
-height: 1vh;
-background-color: #FEC398;
-padding: 0;
-
-}
-.title{
-	font-weight: bold;
-	font-size: 5vh;
-	/*width:35%;*/
-	width: 32vh;
-	display: inline-block;
-}
-.phonetic{
-	font-weight: bold;
-	font-size: 2vh;
-	/*width:20%;*/
-	width:15vh;
-	display: inline-block;
-	opacity: 0.5;
-}
-.audio{
-	display: inline-block;
-}
-h2{
-	font-weight: normal;
-	font-size: 5vh;
-}
-body{
-	background-color: #FDFDFD;
-	color: #333333;
-	font-family: 'Roboto', sans-serif;
-	margin-left:25%;
-	margin-right:25%;
-	font-size: 2vh;
-	overflow: hidden;
-	text-decoration: none;
-}
-#home{
-	margin-top: 40vh;
-}
-
-/*social stuff*/
-.social-icon
-{
-  fill: #333333;
-}
-.navbar{
-	/*display:inline-block ; */
-	float:right;
-	/*width: 45%;*/
-	width: 31vh;
-	height:5vh;
-}
-#contact ul, .navbar ul
-{
-  list-style: none;
-  margin: auto;
+	font-family: 'Roboto';
+	src: url('roboto.eot'); /* IE9 Compat Modes */
+	src: url('roboto.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	url('roboto.woff') format('woff'), /* Modern Browsers */
+	url('roboto.ttf')  format('truetype'), /* Safari, Android, iOS */
+	url('roboto.svg#svgFontName') format('svg'); /* Legacy iOS */
+  }
+  .bar{
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  width:100%;
+  height: 1vh;
+  background-color: #FEC398;
   padding: 0;
+  
+  }
 
-}
-.navbar ul{
-	position: relative;
-	bottom: 0%;
+  .title{
+	  font-weight: 700 !important;
+	  font-size: 50;
+  
+  }
+  .phonetic{
+	  font-weight: 650 !important;
+	  opacity: 0.5;
+  }
+  .audio{
+  }
+  
+  h2{
+	  font-weight: normal;
+  }
+  .nopadding {
+	 padding: 0 !important;
+	 margin: 0 !important;
+  }
+  body{
+	  background-color: #FDFDFD;
+	  color: #333333;
+	  font-family: 'Roboto', sans-serif;
+	  margin-left:5%;
+	  margin-right:5%;
+	  font-size: 37.5;
+	  overflow: hidden;
+	  text-decoration: none;
+  
+  }
+  .text{
+	font-size: 37.5;
+
+  }
+  #home{
+	  margin-top: 35vh;
+	  /* max-width: 800px; */
+	  margin-left:30%;
+	  margin-right:30%;
+  }
+  #about{
+	margin-top: 25vh;
+		margin-left:30%;
+		margin-right:30%;
+  }
+  #about p{
+	  font-size: 28;
+  }
+  /*social stuff*/
+  .social-icon
+  {
+	fill: #333333;
+  }
+  .navbar, #contact{
+	  /*display:inline-block ; */
+	  float:right;
+	  padding-right: 0 !important;
+  }
+  #contact ul, .navbar ul
+  {
+	list-style: none;
+	margin: auto;
+	padding: 0;
+	float:right !important;
+  
+  }
+  .navbar ul{
+  /*	position: relative;
+	  bottom: 0%;
+	  */
+  }
+  #contact li
+  {
+	display:inline; 
+	text-align: center;
+	padding: 5px;
+  
+  }
+  .navbar li
+  {
+	color: #333333;
+	display:inline;
+	float: right;
+	padding-left: 5vh;
 	
-}
-#contact li
-{
-  display:inline; 
-  text-align: center;
-  padding: 5px;
-
-}
-.navbar li
-{
-  color: #333333;
-  display:inline;
-  float: right;
-  padding-left: 5vh;
-  padding-bottom: 0;
-  padding-top: 2vh;
-
-
-}
-a { color: inherit; 
-text-decoration: none;} 
-/*#dr:hover, #gh:hover, #ig:hover, #li:hover, #me:hover, #re:hover, .navbar li*/
-li:hover, .audio:hover
-{
-    fill-opacity:0.4;
-}
+	padding-top: 2vh;
+	vertical-align: middle !important;
+	font-size: 24;
+  
+  
+  }
+  a { color: #333333 !important; 
+  text-decoration: none !important;} 
+  /*#dr:hover, #gh:hover, #ig:hover, #li:hover, #me:hover, #re:hover, .navbar li*/
+  li:hover, .audio:hover, a:hover
+  {
+	  fill-opacity:0.4 !important;
+  }
